Slider visual complite

--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css"> </head>
 
 <body>
     <div class="container">
         <div class="slider padding-site">
-            <div class="header clearfix">
+            <div class="header">
                 <a href="#"><img src="img/logo.svg" alt="logo"></a>
-                <ul class="menu">
+                <ul class="menu clearfix">
                     <li class="menu-list"><a href="index.html" class="menu-link menu-link-active">HOME</a></li>
                     <li class="menu-list"><a href="" class="menu-link">PRODUCTS</a></li>
                     <li class="menu-list"><a href="" class="menu-link">HISTORY</a></li>
                     <li class="menu-list"><a href="" class="menu-link">SHOWROOM</a></li>
                     <li class="menu-list"><a href="" class="menu-link">CONTACT</a></li>
-                    <li class="menu-list"><a href="#" class="menu-link"><img src="img/search.svg" alt="search"></a></li>
+                    <li class="menu-list">
+                        <a href="#" class="menu-link"><img src="img/search.svg" alt="search"></a>
+                    </li>
                 </ul>
             </div>
             <div class="slider-text">
