add menu content top

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
                 <a href="#" class="circle"></a>
             </div>
         </div>
+        <div class="content">
+            <div class="menu-cont">
+                <ul class="menu-cont-list">
+                    <li class="menunewfcontent"><a href="" class="menu-link-fea  menu-link-active">Featuted</a></li>
+                    <li class="menunewfcontent"><a href="" class="menu-link-new">New</a></li>
+                </ul>
+            <a href="#" class="explore-all">explore all ></a>
+            </div>
+        </div>
     </div>
 </body>
 
