cat:hover (not complite)

--- a/index.html
+++ b/index.html
@@ -33,12 +33,28 @@
             </div>
         </div>
         <div class="content">
-            <div class="menu-cont">
+            <div class="menu-cont clearfix">
                 <ul class="menu-cont-list">
                     <li class="menunewfcontent"><a href="" class="menu-link-fea  menu-link-active">Featuted</a></li>
                     <li class="menunewfcontent"><a href="" class="menu-link-new">New</a></li>
-                </ul>
-            <a href="#" class="explore-all">explore all ></a>
+                </ul> <a href="#" class="explore-all">explore all ></a> </div>
+            <div class="product">
+                <div class="tovary">
+                    <ul class="menu-product">
+                        <li class="tovar">
+                            <a href="#" class="link-tovar"><img src="img/product-1.jpg" alt="tovar" class="cart"><img src="img/product-1.jpg" alt="cart tovar" class="img-hover"></a>
+                        </li>
+                        <li class="tovar">
+                            <a href="#" class="link-tovar"><img src="img/product-2.jpg" alt="tovar" class="cart"><img src="img/product-1.jpg" alt="cart tovar" class="img-hover"></a>
+                        </li>
+                        <li class="tovar">
+                            <a href="#" class="link-tovar"><img src="img/product-3.jpg" alt="tovar" class="cart"><img src="img/product-1.jpg" alt="cart tovar" class="img-hover"></a>
+                        </li>
+                        <li class="tovar">
+                            <a href="#" class="link-tovar"><img src="img/product-4.jpg" alt="tovar" class="cart"><img src="img/product-1.jpg" alt="cart tovar" class="img-hover"></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
