--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="slider-text">
                 <p class="slider-tranding">TRENDING</p>
                 <h2 class="slider-h2">Fishnet Chair</h2>
-                <p class="slider-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="" class="button">Order Us</a> </div>
+                <p class="slider-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="" class="button">Order Us ></a> </div>
             <div class="pagination clearfix">
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle circle-active"></a>
@@ -42,18 +42,32 @@
                 <div class="tovary">
                     <ul class="menu-product">
                         <li class="tovar">
-                            <a href="#" class="link-tovar"><img src="img/product-1.jpg" alt="tovar" class="cart"><img src="img/product-1.jpg" alt="cart tovar" class="img-hover"></a>
+                            <a href="#" class="link-tovar"><img src="img/product-1.jpg" alt="tovar" class="cart"><img src="img/product-content-hover.png" alt="cart tovar" class="img-hover"></a>
                         </li>
                         <li class="tovar">
-                            <a href="#" class="link-tovar"><img src="img/product-2.jpg" alt="tovar" class="cart"><img src="img/product-1.jpg" alt="cart tovar" class="img-hover"></a>
+                            <a href="#" class="link-tovar"><img src="img/product-2.jpg" alt="tovar" class="cart"><img src="img/product-content-hover.png" alt="cart tovar" class="img-hover"></a>
                         </li>
                         <li class="tovar">
-                            <a href="#" class="link-tovar"><img src="img/product-3.jpg" alt="tovar" class="cart"><img src="img/product-1.jpg" alt="cart tovar" class="img-hover"></a>
+                            <a href="#" class="link-tovar"><img src="img/product-3.jpg" alt="tovar" class="cart"><img src="img/product-content-hover.png" alt="cart tovar" class="img-hover"></a>
                         </li>
                         <li class="tovar">
-                            <a href="#" class="link-tovar"><img src="img/product-4.jpg" alt="tovar" class="cart"><img src="img/product-1.jpg" alt="cart tovar" class="img-hover"></a>
+                            <a href="#" class="link-tovar"><img src="img/product-4.jpg" alt="tovar" class="cart"><img src="img/product-content-hover.png" alt="cart tovar" class="img-hover"></a>
                         </li>
                     </ul>
+                </div>
+            </div>
+            <div class="promo">
+                <div class="promo-left">
+                    <div class="promo-text">
+                        <p class="promo-exclusive">exclusive</p>
+                        <h2 class="promo-h2">Fishnet Chair</h2>
+                        <p class="promo-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="" class="button">Order Us ></a> </div>
+                </div>
+                <div class="promo-right">
+                    <div class="promo-text">
+                        <p class="promo-exclusive">exclusive</p>
+                        <h2 class="promo-h2">Fishnet Chair</h2>
+                        <p class="promo-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="" class="button">Order Us ></a> </div>
                 </div>
             </div>
         </div>
