Add Trending Products

--- a/index.html
+++ b/index.html
@@ -69,6 +69,40 @@
                         <h2 class="promo-h2">Fishnet Chair</h2>
                         <p class="promo-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="" class="button">Order Us ></a> </div>
                 </div>
+                <div class="content">
+                    <div class="menu-cont clearfix">
+                        <ul class="menu-cont-list2">
+                            <li class="menunewfcontent"><a href="" class="menu-link-fea">Trending Products</a></li>
+                        </ul> <a href="#" class="explore-all">explore all ></a> </div>
+                     <div class="product">
+                        <div class="tovary2">
+                            <ul class="menu-product2">
+                                <li class="tovar">
+                                    <a href="#" class="link-tovar2"><img src="img/product-11.jpg" alt="tovar"></a>
+                                </li>
+                                <li class="tovar">
+                                    <a href="#" class="link-tovar2"><img src="img/product-21.jpg" alt="tovar"></a>
+                                </li>
+                                <li class="tovar">
+                                    <a href="#" class="link-tovar2"><img src="img/product-31.jpg" alt="tovar"></a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="tovary2">
+                            <ul class="menu-product2">
+                                <li class="tovar">
+                                    <a href="#" class="link-tovar2"><img src="img/product-41.jpg" alt="tovar"></a>
+                                </li>
+                                <li class="tovar">
+                                    <a href="#" class="link-tovar2"><img src="img/product-5.jpg" alt="tovar"></a>
+                                </li>
+                                <li class="tovar">
+                                    <a href="#" class="link-tovar2"><img src="img/product-6.jpg" alt="tovar"></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
