--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <ul class="menu-cont-list2">
                             <li class="menunewfcontent"><a href="" class="menu-link-fea">Trending Products</a></li>
                         </ul> <a href="#" class="explore-all">explore all ></a> </div>
-                     <div class="product">
+                    <div class="product">
                         <div class="tovary2">
                             <ul class="menu-product2">
                                 <li class="tovar">
@@ -101,6 +101,47 @@
                                 </li>
                             </ul>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="slider2 padding-site2">
+            <div class="slider-text2">
+                <p class="slider-hotdeal">hot deal</p>
+                <h2 class="slider-h2">Fishnet Chair</h2>
+                <p class="slider-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="" class="button">Order Us ></a> </div>
+            <div class="pagination clearfix">
+                <a href="#" class="circle"></a>
+                <a href="#" class="circle circle-active"></a>
+                <a href="#" class="circle"></a>
+            </div>
+        </div>
+        <div class="sl3">
+            <div class="slider3 padding-site3">
+                <div class="slider-text3">
+                    <p class="slider-exclusive">exclusive</p>
+                    <h2 class="slider-h2 s3">Fishnet Chair</h2>
+                    <p class="slider-content s3c">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="" class="button">Order Us ></a> </div>
+                <div class="product3">
+                    <div class="tabl3l">
+                        <ul class="menu-product3">
+                            <li class="tovar">
+                                <a href="#" class="link-tovar2"><img src="img/product-2-sm.png" alt="tovar"></a>
+                            </li>
+                            <li class="tovar">
+                                <a href="#" class="link-tovar2"><img src="img/product-3-sm.png" alt="tovar"></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="tabl3r">
+                        <ul class="menu-product3">
+                            <li class="tovar">
+                                <a href="#" class="link-tovar2"><img src="img/product-4-sm.png" alt="tovar"></a>
+                            </li>
+                            <li class="tovar">
+                                <a href="#" class="link-tovar2"><img src="img/product-5-sm.png" alt="tovar"></a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
