--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <p class="slider-exclusive">exclusive</p>
                     <h2 class="slider-h2 s3">Fishnet Chair</h2>
                     <p class="slider-content s3c">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="" class="button">Order Us ></a> </div>
-                <div class="product3">
+                <!--  <div class="product3">
                     <div class="tabl3l">
                         <ul class="menu-product3">
                             <li class="tovar">
@@ -145,6 +145,7 @@
                     </div>
                 </div>
             </div>
+        </div>--></div>
         </div>
     </div>
 </body>
