--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css"> </head>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
 <body>
     <div class="container">
@@ -25,7 +26,8 @@
             <div class="slider-text">
                 <p class="slider-tranding">TRENDING</p>
                 <h2 class="slider-h2">Fishnet Chair</h2>
-                <p class="slider-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="" class="button">Order Us ></a> </div>
+                <p class="slider-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="" class="button">Order Us ></a>
+            </div>
             <div class="pagination clearfix">
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle circle-active"></a>
@@ -37,7 +39,8 @@
                 <ul class="menu-cont-list">
                     <li class="menunewfcontent"><a href="" class="menu-link-fea  menu-link-active">Featuted</a></li>
                     <li class="menunewfcontent"><a href="" class="menu-link-new">New</a></li>
-                </ul> <a href="#" class="explore-all">explore all ></a> </div>
+                </ul> <a href="#" class="explore-all">explore all ></a>
+            </div>
             <div class="product">
                 <div class="tovary">
                     <ul class="menu-product">
@@ -61,19 +64,22 @@
                     <div class="promo-text">
                         <p class="promo-exclusive">exclusive</p>
                         <h2 class="promo-h2">Fishnet Chair</h2>
-                        <p class="promo-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="" class="button">Order Us ></a> </div>
+                        <p class="promo-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="" class="button">Order Us ></a>
+                    </div>
                 </div>
                 <div class="promo-right">
                     <div class="promo-text">
                         <p class="promo-exclusive">exclusive</p>
                         <h2 class="promo-h2">Fishnet Chair</h2>
-                        <p class="promo-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="" class="button">Order Us ></a> </div>
+                        <p class="promo-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="" class="button">Order Us ></a>
+                    </div>
                 </div>
                 <div class="content">
                     <div class="menu-cont clearfix">
                         <ul class="menu-cont-list2">
                             <li class="menunewfcontent"><a href="" class="menu-link-fea">Trending Products</a></li>
-                        </ul> <a href="#" class="explore-all">explore all ></a> </div>
+                        </ul> <a href="#" class="explore-all">explore all ></a>
+                    </div>
                     <div class="product">
                         <div class="tovary2">
                             <ul class="menu-product2">
@@ -109,7 +115,8 @@
             <div class="slider-text2">
                 <p class="slider-hotdeal">hot deal</p>
                 <h2 class="slider-h2">Fishnet Chair</h2>
-                <p class="slider-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="" class="button">Order Us ></a> </div>
+                <p class="slider-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="" class="button">Order Us ></a>
+            </div>
             <div class="pagination clearfix">
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle circle-active"></a>
@@ -121,8 +128,9 @@
                 <div class="slider-text3">
                     <p class="slider-exclusive">exclusive</p>
                     <h2 class="slider-h2 s3">Fishnet Chair</h2>
-                    <p class="slider-content s3c">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="" class="button">Order Us ></a> </div>
-                <!--  <div class="product3">
+                    <p class="slider-content s3c">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="" class="button">Order Us ></a>
+                </div>
+                <div class="product3">
                     <div class="tabl3l">
                         <ul class="menu-product3">
                             <li class="tovar">
@@ -145,9 +153,13 @@
                     </div>
                 </div>
             </div>
-        </div>--></div>
+        </div>
+        <div class="slider-text4">
+            <p class="mobile-app">mobile app</p>
+            <h2 class="slider-h2-4">Find. Follow. Favorite.</h2>
+            <p class="slider-content-4 clearfix">Save your favorites and share your style.</p>
+            <a href="https://www.apple.com/ru/ios/app-store/" class="buttonapp" target="_blank"><img src="img/app-store.png" alt="" class="apps"></a>
+            <a href="https://play.google.com/store" class="buttonapp" target="_blank"><img src="img/google-play.jpg" alt="gplay" class="apps"></a>
         </div>
     </div>
-</body>
-
-</html>
+</body></html>
