--- a/index.html
+++ b/index.html
@@ -154,12 +154,23 @@
                 </div>
             </div>
         </div>
-        <div class="slider-text4">
+        <div class="slider-text4 padding-site3">
             <p class="mobile-app">mobile app</p>
             <h2 class="slider-h2-4">Find. Follow. Favorite.</h2>
             <p class="slider-content-4 clearfix">Save your favorites and share your style.</p>
             <a href="https://www.apple.com/ru/ios/app-store/" class="buttonapp" target="_blank"><img src="img/app-store.png" alt="" class="apps"></a>
             <a href="https://play.google.com/store" class="buttonapp" target="_blank"><img src="img/google-play.jpg" alt="gplay" class="apps"></a>
         </div>
+    <div class="footerblock">
+        <div class="footermenu">
+            <div class="footer padding-site3">
+                <div class="menufooter">
+                    
+                </div>
+                
+                <footer><div class="copyr">© Copyright - INTERIOR 2016. All Rights Reserved.</div><div class="socialimg"><a href="" class="soc"><img src="img/social-links.png" alt=""></a></div> <div class="terms"><a href="" class="link">Terms &amp; Conditions</a> /  <a href="" class="link">Privacy policy &amp; Cookies</a></div></footer>
+            </div>
+        </div>
+    </div>
     </div>
 </body></html>
