--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     
                 </div>
                 
-                <footer><div class="copyr">© Copyright - INTERIOR 2016. All Rights Reserved.</div><div class="socialimg"><a href="" class="soc"><img src="img/social-links.png" alt=""></a></div> <div class="terms"><a href="" class="link">Terms &amp; Conditions</a> /  <a href="" class="link">Privacy policy &amp; Cookies</a></div></footer>
+                <footer><div class="copyr">© Copyright - INTERIOR 2016. All Rights Reserved.</div><div class="socialimg"><a href="#" class="soc"><img src="img/social-links.png" alt="social"></a></div> <div class="terms"><a href="#" class="link">Terms &amp; Conditions</a> /  <a href="#" class="link">Privacy policy &amp; Cookies</a></div></footer>
             </div>
         </div>
     </div>
