--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
         </div>
         <div class="sl3">
-            <div class="slider3 padding-site3">
+            <div class="slider3">
                 <div class="slider-text3">
                     <p class="slider-exclusive">exclusive</p>
                     <h2 class="slider-h2 s3">Fishnet Chair</h2>
@@ -133,21 +133,21 @@
                 <div class="product3">
                     <div class="tabl3l">
                         <ul class="menu-product3">
-                            <li class="tovar">
-                                <a href="#" class="link-tovar2"><img src="img/product-2-sm.png" alt="tovar"></a>
+                            <li class="tovar2">
+                                <a href="#" class="link-tovar2"><img src="img/product-2-sm.png" alt="tovar2"></a>
                             </li>
-                            <li class="tovar">
-                                <a href="#" class="link-tovar2"><img src="img/product-3-sm.png" alt="tovar"></a>
+                            <li class="tovar2">
+                                <a href="#" class="link-tovar2"><img src="img/product-3-sm.png" alt="tovar2"></a>
                             </li>
                         </ul>
                     </div>
                     <div class="tabl3r">
                         <ul class="menu-product3">
                             <li class="tovar">
-                                <a href="#" class="link-tovar2"><img src="img/product-4-sm.png" alt="tovar"></a>
+                                <a href="#" class="link-tovar2"><img src="img/product-4-sm.png" alt="tovar2"></a>
                             </li>
                             <li class="tovar">
-                                <a href="#" class="link-tovar2"><img src="img/product-5-sm.png" alt="tovar"></a>
+                                <a href="#" class="link-tovar2"><img src="img/product-5-sm.png" alt="tovar2"></a>
                             </li>
                         </ul>
                     </div>
@@ -163,12 +163,12 @@
         </div>
     <div class="footerblock">
         <div class="footermenu">
-            <div class="footer padding-site3">
+            <div class="footerblock">
                 <div class="menufooter">
                     
                 </div>
                 
-                <footer><div class="copyr">© Copyright - INTERIOR 2016. All Rights Reserved.</div><div class="socialimg"><a href="#" class="soc"><img src="img/social-links.png" alt="social"></a></div> <div class="terms"><a href="#" class="link">Terms &amp; Conditions</a> /  <a href="#" class="link">Privacy policy &amp; Cookies</a></div></footer>
+                <div class="footer"><footer><div class="copyr">© Copyright - INTERIOR 2016. All Rights Reserved.</div><div class="socialimg"><a href="#" class="soc"><img src="img/social-links.png" alt="social"></a></div> <div class="terms"><a href="#" class="link">Terms &amp; Conditions</a> /  <a href="#" class="link">Privacy policy &amp; Cookies</a></div></footer></div>
             </div>
         </div>
     </div>
