--- a/index.html
+++ b/index.html
@@ -130,27 +130,27 @@
                     <h2 class="slider-h2 s3">Fishnet Chair</h2>
                     <p class="slider-content s3c">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="" class="button">Order Us ></a>
                 </div>
-                <div class="product3">
-                    <div class="tabl3l">
-                        <ul class="menu-product3">
-                            <li class="tovar2">
-                                <a href="#" class="link-tovar2"><img src="img/product-2-sm.png" alt="tovar2"></a>
-                            </li>
-                            <li class="tovar2">
-                                <a href="#" class="link-tovar2"><img src="img/product-3-sm.png" alt="tovar2"></a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="tabl3r">
-                        <ul class="menu-product3">
-                            <li class="tovar">
-                                <a href="#" class="link-tovar2"><img src="img/product-4-sm.png" alt="tovar2"></a>
-                            </li>
-                            <li class="tovar">
-                                <a href="#" class="link-tovar2"><img src="img/product-5-sm.png" alt="tovar2"></a>
-                            </li>
-                        </ul>
-                    </div>
+            </div>
+            <div class="product3">
+                <div class="tabl3l">
+                    <ul class="menu-product3">
+                        <li class="tovar2">
+                            <a href="#" class="link-tovar2"><img src="img/product-2-sm.png" alt="tovar2"></a>
+                        </li>
+                        <li>
+                            <a href="#" class="link-tovar2"><img src="img/product-3-sm.png" alt="tovar2"></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="tabl3r">
+                    <ul class="menu-product3-1">
+                        <li class="tovar">
+                            <a href="#" class="link-tovar2"><img src="img/product-4-sm.png" alt="tovar2"></a>
+                        </li>
+                        <li class="">
+                            <a href="#" class="link-tovar2"><img src="img/product-5-sm.png" alt="tovar2"></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -161,16 +161,24 @@
             <a href="https://www.apple.com/ru/ios/app-store/" class="buttonapp" target="_blank"><img src="img/app-store.png" alt="" class="apps"></a>
             <a href="https://play.google.com/store" class="buttonapp" target="_blank"><img src="img/google-play.jpg" alt="gplay" class="apps"></a>
         </div>
-    <div class="footerblock">
-        <div class="footermenu">
-            <div class="footerblock">
-                <div class="menufooter">
-                    
+        <div class="footerblock">
+            <div class="footermenu">
+                <div class="footerblock">
+                    <div class="menufooter">
+
+                    </div>
+
+                    <div class="footer">
+                        <footer>
+                            <div class="copyr">© Copyright - INTERIOR 2016. All Rights Reserved.</div>
+                            <div class="socialimg"><a href="#" class="soc"><img src="img/social-links.png" alt="social"></a></div>
+                            <div class="terms"><a href="#" class="link">Terms &amp; Conditions</a> / <a href="#" class="link">Privacy policy &amp; Cookies</a></div>
+                        </footer>
+                    </div>
                 </div>
-                
-                <div class="footer"><footer><div class="copyr">© Copyright - INTERIOR 2016. All Rights Reserved.</div><div class="socialimg"><a href="#" class="soc"><img src="img/social-links.png" alt="social"></a></div> <div class="terms"><a href="#" class="link">Terms &amp; Conditions</a> /  <a href="#" class="link">Privacy policy &amp; Cookies</a></div></footer></div>
             </div>
         </div>
     </div>
-    </div>
-</body></html>
+</body>
+
+</html>
