--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <a href="#"><img src="img/logo.svg" alt="logo"></a>
                 <ul class="menu clearfix">
                     <li class="menu-list"><a href="index.html" class="menu-link menu-link-active">HOME</a></li>
-                    <li class="menu-list"><a href="" class="menu-link">PRODUCTS</a></li>
-                    <li class="menu-list"><a href="" class="menu-link">HISTORY</a></li>
-                    <li class="menu-list"><a href="" class="menu-link">SHOWROOM</a></li>
-                    <li class="menu-list"><a href="" class="menu-link">CONTACT</a></li>
+                    <li class="menu-list"><a href="#" class="menu-link">PRODUCTS</a></li>
+                    <li class="menu-list"><a href="#" class="menu-link">HISTORY</a></li>
+                    <li class="menu-list"><a href="#" class="menu-link">SHOWROOM</a></li>
+                    <li class="menu-list"><a href="#" class="menu-link">CONTACT</a></li>
                     <li class="menu-list">
                         <a href="#" class="menu-link"><img src="img/search.svg" alt="search"></a>
                     </li>
@@ -26,7 +26,7 @@
             <div class="slider-text">
                 <p class="slider-tranding">TRENDING</p>
                 <h2 class="slider-h2">Fishnet Chair</h2>
-                <p class="slider-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="" class="button">Order Us ></a>
+                <p class="slider-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us ></a>
             </div>
             <div class="pagination clearfix">
                 <a href="#" class="circle"></a>
@@ -37,8 +37,8 @@
         <div class="content">
             <div class="menu-cont clearfix">
                 <ul class="menu-cont-list">
-                    <li class="menunewfcontent"><a href="" class="menu-link-fea  menu-link-active">Featuted</a></li>
-                    <li class="menunewfcontent"><a href="" class="menu-link-new">New</a></li>
+                    <li class="menunewfcontent"><a href="#" class="menu-link-fea  menu-link-active">Featuted</a></li>
+                    <li class="menunewfcontent"><a href="#" class="menu-link-new">New</a></li>
                 </ul> <a href="#" class="explore-all">explore all ></a>
             </div>
             <div class="product">
@@ -64,20 +64,20 @@
                     <div class="promo-text">
                         <p class="promo-exclusive">exclusive</p>
                         <h2 class="promo-h2">Fishnet Chair</h2>
-                        <p class="promo-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="" class="button">Order Us ></a>
+                        <p class="promo-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us ></a>
                     </div>
                 </div>
                 <div class="promo-right">
                     <div class="promo-text">
                         <p class="promo-exclusive">exclusive</p>
                         <h2 class="promo-h2">Fishnet Chair</h2>
-                        <p class="promo-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="" class="button">Order Us ></a>
+                        <p class="promo-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us ></a>
                     </div>
                 </div>
                 <div class="content">
                     <div class="menu-cont clearfix">
                         <ul class="menu-cont-list2">
-                            <li class="menunewfcontent"><a href="" class="menu-link-fea">Trending Products</a></li>
+                            <li class="menunewfcontent"><a href="#" class="menu-link-fea">Trending Products</a></li>
                         </ul> <a href="#" class="explore-all">explore all ></a>
                     </div>
                     <div class="product">
@@ -115,7 +115,7 @@
             <div class="slider-text2">
                 <p class="slider-hotdeal">hot deal</p>
                 <h2 class="slider-h2">Fishnet Chair</h2>
-                <p class="slider-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="" class="button">Order Us ></a>
+                <p class="slider-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us ></a>
             </div>
             <div class="pagination clearfix">
                 <a href="#" class="circle"></a>
@@ -128,7 +128,7 @@
                 <div class="slider-text3">
                     <p class="slider-exclusive">exclusive</p>
                     <h2 class="slider-h2 s3">Fishnet Chair</h2>
-                    <p class="slider-content s3c">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="" class="button">Order Us ></a>
+                    <p class="slider-content s3c">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="#" class="button">Order Us ></a>
                 </div>
             </div>
             <div class="product3">
