Add & Style Footer menu

--- a/index.html
+++ b/index.html
@@ -163,21 +163,75 @@
         </div>
         <div class="footerblock">
             <div class="footermenu">
-                <div class="footerblock">
-                    <div class="menufooter">
+
+                <div class="menufooter">
+                    <div class="left-col">
+                        <div class="h-footer-menu">
+                            <p>Contact Us</p>
+                        </div>
+                        <div class="footer-p-left1">
+                            <p>132A Bridge Road Richmond VIC
+                                Australia.</p>
+                        </div>
+                        <div class="footer-p-left1">
+                            <p>Talk to us on 1300 132
+                                info@interior.com</p>
+                        </div>
+                    </div>
+                    <div class="center-col">
+                        <div class="h-footer-menu">
+                            <p>Useful Information</p>
+                        </div>
+                        <div class="center-menu1">
+                            <ul>
+                                <li>Sales terms</li>
+                            </ul>
+                            <ul>
+                                <li>Customer care</li>
+                            </ul>
+                            <ul>
+                                <li>Delivery</li>
+                            </ul>
+                        </div>
+                        <div class="center-menu2">
+                            <ul>
+                                <li>Architect accountss</li>
+                            </ul>
+                            <ul>
+                                <li>Careers</li>
+                            </ul>
+                            <ul>
+                                <li>Exchanges &amp; return</li>
+                            </ul>
+                        </div>
 
                     </div>
-
-                    <div class="footer">
-                        <footer>
-                            <div class="copyr">© Copyright - INTERIOR 2016. All Rights Reserved.</div>
-                            <div class="socialimg"><a href="#" class="soc"><img src="img/social-links.png" alt="social"></a></div>
-                            <div class="terms"><a href="#" class="link">Terms &amp; Conditions</a> / <a href="#" class="link">Privacy policy &amp; Cookies</a></div>
-                        </footer>
+                    <div class="right-col">
+                        <div class="h-footer-menu">
+                            <p>Let’s Stay in Touch!</p>
+                        </div>
+                        <div class="text-right-col">
+                            <p>Suscribe to know about our latest news, products and special offers just for suscribers.</p>
+                        </div>
+                        <div class="suscribe">
+                            <form>
+                                <input type="email" placeholder="your email address">
+                                <button type="submit"></button>
+                            </form>
+                        </div>
                     </div>
                 </div>
+                <div class="footer">
+
+                    <div class="copyr">© Copyright - INTERIOR 2016. All Rights Reserved.</div>
+                    <div class="socialimg"><a href="#" class="soc"><img src="img/social-links.png" alt="social"></a></div>
+                    <div class="terms"><a href="#" class="link">Terms &amp; Conditions</a> / <a href="#" class="link">Privacy policy &amp; Cookies</a></div>
+
+                </div>
             </div>
+
         </div>
+
     </div>
 </body>
 
