update footer copyr

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     </div>
                 </div>
                 <div class="footer">
-                    <div class="copyr">© Copyright - INTERIOR 2016. All Rights Reserved.</div>
+                    <div class="copyr">	&#169;&nbsp;Copyright - INTERIOR 2016. All Rights Reserved.</div>
                     <div class="socialimg">
                         <a href="#" class="soc"><img src="img/social-links.png" alt="social"></a>
                     </div>
